changes logos instead words

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,12 @@
-
-body{
-   
-    margin: 0;
-    padding: 0;
-    background: #C9D6FF;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+*{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  color: #000;
 
 }
+
 
 .header{
     
@@ -20,7 +19,6 @@ body{
 }
 
 .title {
- 
   margin: auto;
   font-family: 'Inspiration', cursive;
   font-family: 'Rock 3D', cursive;
@@ -36,8 +34,29 @@ body{
   align-items: center;
   justify-content: space-around;
 }
-a{
-  list-style: none;
-  text-decoration: none;
-  color: #000; 
+.list{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  font-size: 2em;
+  font-weight: 700;
+  font-family: 'Inspiration', cursive;
+  font-family: 'Rock 3D', cursive;
+  
+}
+.list--item{
+  font-weight: 400;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+ 
+  
+}
+.list--item__link{
+  display: flex; 
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  
+
 }
