--- a/css/main.css
+++ b/css/main.css
@@ -7,35 +7,51 @@
 
 }
 
+body{
+ min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
+
+}
+
 
 .header{
-    
+  margin-bottom: 6rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    flex-shrink: 0;
     
 }
 
 .title {
-  margin: auto;
+  text-align: center;
   font-family: 'Inspiration', cursive;
   font-family: 'Rock 3D', cursive;
-  font-size: 5em;
+  font-size: 4em;
 }
 
 
 .main{
   width: 100%;
-  height: 100vh;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items:center;
   justify-content: space-around;
 }
+
+.main--aboutme{
+  width: 70%;
+  font-size: 2em;
+  text-align:left;
+  margin-bottom: 6rem;
+  flex-shrink: 1;
+}
 .list{
-  width: 100%;
+  width: 40%;
   display: flex;
   justify-content: space-around;
   font-size: 2em;
