--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,12 @@
   padding: 0;
   list-style: none;
   text-decoration: none;
-  color: #000;
+  
 
+}
+
+html {
+  color: #222;
 }
 
 body{
@@ -12,8 +16,8 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
-
+  font-family:Arial, Helvetica, sans-serif;
+  background-color:aliceblue;
 }
 
 
@@ -25,14 +29,19 @@ body{
     align-items: center;
     flex-shrink: 0;
     
+    
 }
 
 .title {
+  
   text-align: center;
   font-family: 'Inspiration', cursive;
   font-family: 'Rock 3D', cursive;
   font-size: 4em;
+  
+  
 }
+
 
 
 .main{
@@ -41,38 +50,39 @@ body{
   flex-direction: column;
   align-items:center;
   justify-content: space-around;
+  line-height: 3rem;
+  
 }
 
-.main--aboutme{
+.main__aboutme{
+  
   width: 70%;
   font-size: 2em;
   text-align:left;
   margin-bottom: 6rem;
   flex-shrink: 1;
+
+  
 }
+
+
 .list{
   width: 40%;
   display: flex;
   justify-content: space-around;
   font-size: 2em;
-  font-weight: 700;
   font-family: 'Inspiration', cursive;
   font-family: 'Rock 3D', cursive;
-  
 }
-.list--item{
+
+
+
+.list__item{
   font-weight: 400;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
- 
-  
 }
-.list--item__link{
-  display: flex; 
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  
 
-}
+
+
