--- a/css/main.css
+++ b/css/main.css
@@ -3,26 +3,27 @@
   padding: 0;
   list-style: none;
   text-decoration: none;
+ 
   
 
 }
 
-html {
-  color: #222;
-}
+
 
 body{
  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   font-family:Arial, Helvetica, sans-serif;
   background-color:aliceblue;
+  color: #222;
 }
 
 
 .header{
-  margin-bottom: 6rem;
+  
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -58,7 +59,7 @@ body{
   
   width: 70%;
   font-size: 2em;
-  text-align:left;
+  text-align:justify;
   margin-bottom: 6rem;
   flex-shrink: 1;
 
@@ -81,6 +82,36 @@ body{
 .list__item{
   margin: 0 5%;
   
+}
+
+.buttonmode{
+  font-size: 25px;
+  background-color: #222;
+  mask-image: url('/images-logos/moon-stars-solid.svg');
+  -webkit-mask-image: url('/images-logos/moon-stars-solid.svg');
+  width: 50px;
+  height: 50px;
+  border: none;
+  margin: 4rem 0; 
+  cursor: pointer;
+ 
+  
+ 
+}
+
+/**/
+
+.darkmode{
+  background-color: #222;
+  color: aliceblue;
+}
+.darkmode img{
+  filter: invert();
+}
+.darkmode .buttonmode{
+  background-color: aliceblue;
+  mask-image: url('/images-logos/sun-solid.svg');
+  -webkit-mask-image: url('/images-logos/sun-solid.svg');
 }
 
 
