--- a/css/main.css
+++ b/css/main.css
@@ -3,15 +3,14 @@
   padding: 0;
   list-style: none;
   text-decoration: none;
- 
+  box-sizing: border-box;
   
-
 }
 
 
 
 body{
- min-height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,8 +28,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-    
-    
+    padding: 10px;
 }
 
 .title {
@@ -94,9 +92,6 @@ body{
   border: none;
   margin: 4rem 0; 
   cursor: pointer;
- 
-  
- 
 }
 
 /**/
